// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Components renders basic card correctly 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  Basic card content
</div>
`;

exports[`Card Components renders card content 1`] = `
<div
  class="p-6 pt-0"
>
  Sample content
</div>
`;

exports[`Card Components renders card description 1`] = `
<p
  class="text-sm text-muted-foreground"
>
  Sample description text
</p>
`;

exports[`Card Components renders card footer 1`] = `
<div
  class="flex items-center p-6 pt-0"
>
  Footer content
</div>
`;

exports[`Card Components renders card header separately 1`] = `
<div
  class="flex flex-col space-y-1.5 p-6"
>
  <h3
    class="text-2xl font-semibold leading-none tracking-tight"
  >
    Standalone Header
  </h3>
</div>
`;

exports[`Card Components renders card title with different content 1`] = `
<h3
  class="text-2xl font-semibold leading-none tracking-tight"
>
  Sample Title
</h3>
`;

exports[`Card Components renders card with custom className 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm custom-card"
>
  Custom card
</div>
`;

exports[`Card Components renders card with only header and content 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <h3
      class="text-2xl font-semibold leading-none tracking-tight"
    >
      Simple Card
    </h3>
  </div>
  <div
    class="p-6 pt-0"
  >
    Just header and content
  </div>
</div>
`;

exports[`Card Components renders complete card with all components 1`] = `
<div
  class="rounded-lg border bg-card text-card-foreground shadow-sm"
>
  <div
    class="flex flex-col space-y-1.5 p-6"
  >
    <h3
      class="text-2xl font-semibold leading-none tracking-tight"
    >
      Card Title
    </h3>
    <p
      class="text-sm text-muted-foreground"
    >
      This is a card description
    </p>
  </div>
  <div
    class="p-6 pt-0"
  >
    <p>
      This is the main content of the card.
    </p>
  </div>
  <div
    class="flex items-center p-6 pt-0"
  >
    <p>
      Card footer content
    </p>
  </div>
</div>
`;
